# Biba_Boba_Buba_Language

./: .gitignore  README-R.md  README.md  code.txt  matrix.hpp  tmp
.github/workflows/: ci.yml
dump/: dump.gv
frontend/: CMakeLists.txt
frontend/include/: ast_factory.hpp  config.hpp  driver.hpp  dump_path_gen.hpp  error_collector.hpp  expr_evaluator.hpp  graph_dump.hpp  iterative_ast_deleter.hpp  lexer.hpp  my_parser.hpp  node.hpp  node_pool.hpp  scope.hpp  simulator.hpp  token.hpp  tokens.hpp
frontend/include/codegen/: codegen.hpp
frontend/include/data_structures/: node.hpp  node_pool.hpp
frontend/include/graph_dump/: dump_path_gen.hpp  graph_dump.hpp
frontend/include/parser/: error_collector.hpp  lexer.hpp  scope.hpp
frontend/src/: driver.cpp  expr_evaluator.cpp  graph_dump.cpp  iterative_ast_deleter.cpp  lexer.l  main.cpp  parser.y  simulator.cpp
frontend/src/codegen/: codegen.cpp
frontend/tests/: program.txt
frontend/tests/end_to_end/: CMakeLists.txt  check_program_termination.sh  local_var_error.txt  program.txt  several_errors.txt  syntax_error.txt  tuple_assign.txt
frontend/tests/end_to_end/correct_program_tests/: arithm.txt  empty_operator.txt  tuple_assign.txt
frontend/tests/end_to_end/test_assign_in_expr/: test_assign_in_expr.sh
frontend/tests/end_to_end/test_bitwise_op/: bitwise_op.txt  test_bitwise_op.sh
frontend/tests/unit/: CMakeLists.txt
frontend/tests/unit/expr_evaluator/: CMakeLists.txt
frontend/tests/unit/lexer/: CMakeLists.txt
frontend/tests/unit/lexer/src/: get_line_and_column.cpp  process.cpp
(+15 files in other folders)
